[tool.poetry]
name = "jinja-unquote-resolvers-filter"
version = "0.0.1"
readme = "README.md"
homepage = "https://github.com/Sceptre/jinja-unquote-resolvers-filter"
repository = "https://github.com/Sceptre/jinja-unquote-resolvers-filter"
authors = ["Sceptre <sceptreorg@gmail.com>"]
description = "A Jinja filter for allowing Sceptre resolvers in var files"
keywords = ["sceptre", "jinja"]
license = "Apache-2.0"
classifiers = [
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Environment :: Console",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11"
]

[tool.poetry.dependencies]
types-PyYAML = "6.0.12.9"
python = ">=3.8,<3.12"
Jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"
pytest = "^7.3.0"
pre-commit = "^3.2.1"
tox = "^4.0.0"
pytest-cov = "^4.0.0"
sceptre = ">3.2"
types-pyyaml = "^6.0.12.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
