[tool.poetry]
name = "jinja-unquote-resolvers-filter"
version = "1.1.0"
packages = [{ include = "jinja_unquote_resolvers_filter" }]
readme = "README.md"
homepage = "https://github.com/Sceptre/jinja-unquote-resolvers-filter"
repository = "https://github.com/Sceptre/jinja-unquote-resolvers-filter"
authors = ["Sceptre <sceptreorg@gmail.com>"]
description = "A Jinja filter for allowing Sceptre resolvers in var files"
keywords = ["sceptre", "jinja"]
license = "Apache-2.0"
classifiers = [
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Environment :: Console",
]

[tool.poetry.dependencies]
pyyaml = "^6.0"
python = "^3.8"
Jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.1"
tox = "^3.23.0"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
sceptre = "^4.0"
tox-gh-matrix = "^0.2"
mypy = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
